[gd_scene load_steps=7 format=3 uid="uid://cbwoqtp30v4fx"]

[ext_resource type="Script" path="res://Scripts/Ganaste.gd" id="1_7nsjy"]
[ext_resource type="VideoStream" path="res://Animaciones/intro_inicial_lista.ogv" id="2_c67cx"]
[ext_resource type="StyleBox" uid="uid://xj053q2yvb2t" path="res://Styles/ButtonStyleMainMenu.tres" id="2_tcbe6"]
[ext_resource type="FontFile" uid="uid://nrp664l5g3ws" path="res://Fonts/Lilita_One,Rubik_Scribble/Lilita_One/LilitaOne-Regular.ttf" id="3_dx8ot"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ldh0"]
bg_color = Color(0.345098, 0.588235, 0.403922, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_lrdm6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7nsjy")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -745.0
offset_top = -460.0
offset_right = 745.0
offset_bottom = 460.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_c67cx")
autoplay = true
expand = true
loop = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -300.0
offset_right = 600.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6ldh0")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -400.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 60
alignment = 1

[node name="GanasteTitulo" type="Label" parent="Panel/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_dx8ot")
theme_override_font_sizes/font_size = 100
text = "¡Lo lograste!"
vertical_alignment = 1

[node name="GanasteTexto" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("3_dx8ot")
theme_override_font_sizes/font_size = 40
text = "Pusiste tus huevos, ahora 
una nueva generación "
horizontal_alignment = 1
vertical_alignment = 1

[node name="GanasteTexto2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("3_dx8ot")
theme_override_font_sizes/font_size = 40
text = "de piojos está lista para conquistar  el mar argentino. 
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GanasteTexto3" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("3_dx8ot")
theme_override_font_sizes/font_size = 40
text = "¡Tu legado continúa!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolverMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -140.0
offset_right = 200.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_dx8ot")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_tcbe6")
theme_override_styles/hover = ExtResource("2_tcbe6")
theme_override_styles/pressed = ExtResource("2_tcbe6")
theme_override_styles/disabled = ExtResource("2_tcbe6")
theme_override_styles/focus = ExtResource("2_tcbe6")
text = "Volver al menú
"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 1414.0
offset_top = 576.0
offset_right = 1714.0
offset_bottom = 876.0
rotation = 0.286234
texture = SubResource("CompressedTexture2D_lrdm6")
expand_mode = 1

[connection signal="pressed" from="VolverMenu" to="." method="_on_volver_menu_pressed"]
